ncc/testsuite/negative/block2.n
module M {
  bar3 () : int
  {
    block (brk) { 
      def qfoo () {
        brk (42) // E: non local goto
      }
      qfoo(); // W: ignored
      qfoo();
    }
  }

  Main () : void
  {
  }
  
}
